cluster/apps/minio/networkpolicies/minio-ingress-k8up-jobs.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-k8up-jobs
  namespace: minio
spec:
  description: Allow k8up jobs to connect to minio
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.namespace.labels.k8up: backup-enabled
            k8upjob: "true"
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
