cluster/apps/minio/networkpolicies/prometheus-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-minio
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            "k8s:io.kubernetes.pod.namespace": minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
